<resources>
    <string name="app_name">Splash</string>
    <string name="default_name">Ibtehaz Shawon</string>
    <string name="daily_wallpaper">Daily wallpaper</string>
    <string name="tap_to_turn">Tap to turn on</string>
    <string name="set_wallpaper">Set Wallpaper</string>
    <string name="default_courtesy">Courtesy of Unsplash</string>
    <string name="empty_view_scolling">Thats all for now!</string>
    <string name="hello">Hello There!</string>
    <string name="curated">Curated Collections</string>
    <string name="featured">Featured Collections</string>
    <string name="settings">Settings</string>
    <string name="nav_drawer_open">sisim_kholo</string>
    <string name="nav_drawer_close">sisim_bondho</string>
    <string name="default_collection">Collection Title</string>
    <string name="collection_description">This is a dummy collection description. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</string>
    <string name="default_updated_date">3 days ago</string>
    <string name="total_photos">180 Photos</string>
    <string name="last_updated">Last Updated: 3 Days Ago</string>
    <string name="published">Published: September 02, 2016</string>
    <string name="test_local_photo">Test</string>
    <string name="notification_download_status">Status</string>
    <string name="download_complete">Download Complete</string>
    <string name="download_incomplete">Downloading . . .</string>
    <string name="wallpaper_setup_failed">Wallpaper setup failed</string>
    <string name="wallpaper_message">An error occured. Please try again!</string>
    <string name="wallpaper_setup_success">Success!</string>
    <string name="wallpaper_message_success">Successfully sets up a new wallpaper.</string>
    <string name="wallpaper_setup_process_start">Process has started. It may take a while...</string>
    <string name="photo_by_text">Photo by</string>
    <string name="no_connection_available">You don\'t have internet connection.</string>
    <string name="empty_collection">We don\'t have any data for this collection. Please try again later!</string>
    <string name="loading_collection_data">Loading</string>
    <string name="null_returned">An Error Occurred! Please try again!</string>
    <string name="loading_collection_list">Loading Collections... Please wait!</string>
    <string name="day_single">day</string>
    <string name="day_plural">days</string>
    <string name="hour_single">hour</string>
    <string name="hour_plural">hours</string>
    <string name="just_now">Just now</string>
    <string name="min_single">minute</string>
    <string name="min_plural">minutes</string>
    <string name="month_singular">month</string>
    <string name="month_plural">months</string>
    <string name="year_singular">year</string>
    <string name="year_plural">years</string>
    <string name="updated">Updated</string>
    <string name="size_of_internal_image">Choose Image Quality</string>
    <string name="change_wallpaper">Change Wallpaper between</string>
    <string name="wallpaper_change_12">12 AM</string>
    <string name="wallpaper_change_6">6 AM</string>
    <string name="max_wallpaper_data">Select the number of wallpaper to store  everytime</string>
    <string name="wallpaper_change_5">5</string>
    <string name="wallpaper_change_10">10</string>
    <string name="wallpaper_change_15">15</string>
    <string name="offline_hint">Photos will be downloaded and stored on your device. This might require a lot of space</string>
    <string name="download_almost">Almost Complete !!</string>
    <string name="download_wallpaper">Downloading the wallpapers. It will take a while! We will let you know when it\'s over.</string>
    <string name="daily_wallpaper_set">Daily wallpaper is set!</string>
    <string name="download_almost_text">Please choose the necessary options before confirming</string>
    <string name="use_random_photo">Use Random Photo</string>
    <string name="enable_offline">Store Image Locally</string>
    <string name="maximum_photos">You have stored maximum number of photos (10).\n Remove the previous ones from Settings page to add more.</string>
    <string name="wallpaper_set">You have already setup Daily Wallpaper. Do you want to cancel?</string>
    <string name="txt_ok">Confirm</string>
    <string name="txt_cancel">Cancel</string>
    <string name="enabled_daily_wallpaper">Daily Wallpaper</string>
    <string name="change_wallpaper_time">Wallpaper Change Time</string>
    <string name="change_wallpaper_amount">Wallpaper Amount</string>
    <string name="local_stored_photo">Locally Stored Photo</string>
    <string name="total_photo_data">Total Photo Data</string>
    <string name="show_saved_photo">Show Saved Photos</string>
    <string name="total_set_wallpaper">Total Set Wallpaper</string>
    <string name="no_saved_photo">No Saved Photos!</string>
    <string name="all_data_removed">All data removed!</string>
</resources>
