<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wallpaper_set"
        android:textColor="@color/primaryTextColor"
        android:textSize="@dimen/text_20sp"
        android:textAlignment="center"
        android:textStyle="normal"
        android:fontFamily="serif"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/primaryTextColor"
        android:layout_marginTop="@dimen/margin_16dp"
        android:alpha="0.2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/margin_16dp">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_cancel"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:textSize="@dimen/text_16sp"
            android:textAllCaps="false"
            android:textColor="@color/primaryTextColor"
            android:textStyle="normal"
            android:fontFamily="serif"
            android:layout_marginRight="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_12dp"
            />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/primaryTextColor"
            android:alpha="0.2"
            android:layout_marginTop="@dimen/margin_12dp"
            />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_ok"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:textSize="@dimen/text_16sp"
            android:textAllCaps="true"
            android:textColor="@color/textIconsColor"
            android:textStyle="bold"
            android:fontFamily="serif"
            android:layout_marginLeft="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_12dp"
            />


    </LinearLayout>

</LinearLayout>