<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_feed_bg">

    <!--App bar goes here.-->
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_landing"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="center|left"
            android:elevation="@dimen/margin_8dp"
            android:background="@drawable/dark_primary_no_radius"
            >

            <!--action bar-->
            <include layout="@layout/action_bar_default"/>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <!--|||||||||||||||||||||||||||||||||||||||||||||||-->
    <!--\/\/\/\/\/\\/\/\/\/\\/\/\/\/\/\\/\/\/\/\/\/\/\/-->
    <!--|||||||||||||||||||||||||||||||||||||||||||||||-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/white_all_radius"
            android:layout_marginLeft="@dimen/margin_16dp"
            android:layout_marginRight="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:padding="@dimen/margin_16dp">

            <Switch
                android:id="@+id/switch_daily_wallpaper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enabled_daily_wallpaper"
                android:textSize="@dimen/text_16sp"
                android:textStyle="normal"
                android:fontFamily="sans-serif"
                android:textColor="@color/primaryTextColor"
                android:layout_marginBottom="@dimen/margin_16dp"
                android:gravity="center|left"
                />

            <!--|||||||||||||||||||||||||||||||||||||||||||||||-->
            <!--Wallpaper change time-->
            <!--|||||||||||||||||||||||||||||||||||||||||||||||-->
            <!--|||||||||||||||||||||||||||||||||||||||||||||||-->
            <!--Amount of wallpaper data stored!-->
            <!--|||||||||||||||||||||||||||||||||||||||||||||||-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/change_wallpaper_time"
                    android:textColor="@color/primaryTextColor"
                    android:textStyle="normal"
                    android:textSize="@dimen/text_16sp"
                    android:fontFamily="sans-serif"
                    android:layout_weight="1"
                    />

                <TextView
                    android:id="@+id/txt_change_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_16sp"
                    android:fontFamily="sans-serif"
                    android:text="@string/app_name"
                    />
            </LinearLayout>

            <!--|||||||||||||||||||||||||||||||||||||||||||||||-->
            <!--Total photo data-->
            <!--|||||||||||||||||||||||||||||||||||||||||||||||-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/total_photo_data"
                    android:textColor="@color/primaryTextColor"
                    android:textStyle="normal"
                    android:textSize="@dimen/text_16sp"
                    android:fontFamily="sans-serif"
                    android:layout_weight="1"
                    />

                <TextView
                    android:id="@+id/txt_total_photos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_16sp"
                    android:fontFamily="sans-serif"
                    android:text="@string/app_name"
                    />
            </LinearLayout>

            <!--|||||||||||||||||||||||||||||||||||||||||||||||-->
            <!--Locally stored photo data-->
            <!--|||||||||||||||||||||||||||||||||||||||||||||||-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/local_stored_photo"
                    android:textColor="@color/primaryTextColor"
                    android:textStyle="normal"
                    android:textSize="@dimen/text_16sp"
                    android:fontFamily="sans-serif"
                    android:layout_weight="1"
                    />

                <TextView
                    android:id="@+id/txt_locally_stored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_16sp"
                    android:fontFamily="sans-serif"
                    android:text="@string/app_name"
                    />
            </LinearLayout>

            <!--|||||||||||||||||||||||||||||||||||||||||||||||-->
            <!--Total Wallpaper Set-->
            <!--|||||||||||||||||||||||||||||||||||||||||||||||-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/total_set_wallpaper"
                    android:textColor="@color/primaryTextColor"
                    android:textStyle="normal"
                    android:textSize="@dimen/text_16sp"
                    android:fontFamily="sans-serif"
                    android:layout_weight="1"
                    />

                <TextView
                    android:id="@+id/txt_total_wallpaper_set"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_16sp"
                    android:fontFamily="sans-serif"
                    android:text="@string/app_name"
                    />
            </LinearLayout>
            <!--|||||||||||||||||||||||||||||||||||||||||||||||-->
            <!--|||||||||||||||||||||||||||||||||||||||||||||||-->

            <Button
                android:id="@+id/btn_show_photos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16dp"
                android:text="@string/show_saved_photo"
                android:textSize="@dimen/text_16sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:textColor="@color/textIconsColor"
                android:textAllCaps="false"
                android:background="@drawable/accent_all_radius"
                />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ibtehaz Shawon 2017"
        android:layout_gravity="bottom"
        android:gravity="center|bottom"
        android:padding="@dimen/margin_16dp"
        android:textColor="@color/textIconsColor"
        android:fontFamily="serif"
        android:textSize="@dimen/text_14sp"
        android:textStyle="bold"
        />
</LinearLayout>